--- a/<!Doctype html>.html
+++ b/<!Doctype html>.html
@@ -64,6 +64,11 @@ Flutter
 React Native
     </p>
   </div>
+  <div class="flex-container">
+  <div>1</div>
+  <div>2</div>
+  <div>3</div>
+</div>
 <body>
   <h>WELCOME TO MY HTML PAGE</h>
   <h1>LET'S GO</h1>
