--- a/<!Doctype html>.html
+++ b/<!Doctype html>.html
@@ -53,6 +53,15 @@ NW.js (typically used for desktop apps)
 Electron (typically used for desktop apps)
     </p>
   </div>
+  <div class="relative">
+    <h1>This is positioning relative to the given text</h1>
+    <p>an element with position: relative; is positioned relative to its normal position.
+
+Setting the top, right, bottom, and left properties of a relatively-positioned element will cause it to be adjusted away from its normal position. Other content will not be adjusted to fit into any gap left by the element.
+    </p>
+  </div>
+  
+
   <div class="move">
     <h1>Native from Web Tech</h1>
     <p>
