--- a/<!Doctype html>.html
+++ b/<!Doctype html>.html
@@ -61,7 +61,13 @@ Setting the top, right, bottom, and left properties of a relatively-positioned e
     </p>
   </div>
   
+<div class="fixed">
+  <h1>This positioned text will not move from its given position</h1>
+  <p>An element with position: fixed; is positioned relative to the viewport, which means it always stays in the same place even if the page is scrolled. The top, right, bottom, and left properties are used to position the element.
 
+A fixed element does not leave a gap in the page where it would normally have been located.
+  </p>
+  </div>
   <div class="move">
     <h1>Native from Web Tech</h1>
     <p>
