--- a/<!Doctype html>.html
+++ b/<!Doctype html>.html
@@ -60,6 +60,11 @@ Electron (typically used for desktop apps)
 Setting the top, right, bottom, and left properties of a relatively-positioned element will cause it to be adjusted away from its normal position. Other content will not be adjusted to fit into any gap left by the element.
     </p>
   </div>
+  <div class="form">
+    <h1> A full width input field</h1>
+    <label for="fname">First Name</label>
+  <input type="text" id="fname" name="fname">
+  </div>
   
 <div class="fixed">
   <h1>This positioned text will not move from its given position</h1>
