--- a/<!Doctype html>.html
+++ b/<!Doctype html>.html
@@ -7,7 +7,7 @@
 <html>
   <head>
     <link href="styles/style.css" rel="stylesheet" />
-    <img src="img_chania.jpg" alt="Flowers in Chania" width="460" height="345">
+    <img src="4ZE Racing.jpg" alt="Flowers in Chania" width="460" height="345">
   </head>
   
   
