--- a/<!Doctype html>.html
+++ b/<!Doctype html>.html
@@ -91,6 +91,17 @@ React Native
     <div>4</div>
     <div>5</div>
 </div>
+<div class="grid-container">
+  <div class="grid-item">1</div>
+  <div class="grid-item">2</div>
+  <div class="grid-item">3</div>  
+  <div class="grid-item">4</div>
+  <div class="grid-item">5</div>
+  <div class="grid-item">6</div>  
+  <div class="grid-item">7</div>
+  <div class="grid-item">8</div>
+  <div class="grid-item">9</div>  
+</div>
 <body>
   <h>WELCOME TO MY HTML PAGE</h>
   <h1>LET'S GO</h1>
